# Capsule

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .versionrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEFERRED.md  README.md  SECURITY.md  biome.jsonc  build.gradle.kts  clippy.toml  detekt.yml  gradle.properties  hk.pkl  justfile  lefthook.yml  mise.toml  rust-toolchain.toml  rustfmt.toml  settings.gradle.kts
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md  security_report.md
.github/workflows/: build-ios.yml  ci.yml  prepare-release.yml  release.yml
capsule-android/: build.gradle.kts
capsule-api/: Cargo.toml  README.md  build.rs  compose.yaml
capsule-api/auth/: Cargo.toml
capsule-api/auth/src/: errors.rs  validation.rs
capsule-api/auth/src/models/: errors.rs  mod.rs  responses.rs
capsule-api/auth/src/routes/: auth.rs  passkey.rs  password.rs  profile.rs  totp.rs
capsule-api/auth/src/service/: auth.rs  passkey.rs  password.rs  (+2 more)
capsule-api/entity/src/: album.rs  album_share.rs  asset.rs  asset_stack.rs  face.rs  memory.rs  owner.rs  passkey.rs  person.rs  share_link.rs  stack_member.rs  user.rs
capsule-api/environment/src/: jwt.rs  lib.rs
capsule-api/media/src/: error.rs  lib.rs
capsule-api/migration/src/: lib.rs  m20250210_000000_initial_schema.rs  m20250302_000000_add_registered_via.rs  m20260322_000000_change_file_hash_to_sha256.rs
capsule-api/service/src/: storage.rs
capsule-api/src/: main.rs
capsule-api/sync/: Cargo.toml  build.rs
capsule-api/sync/src/: config.rs  lib.rs
capsule-api/testing/src/: common.rs  schema.rs
capsule-api/upload/: Cargo.toml
capsule-api/upload/src/: config.rs  error.rs  lib.rs  state.rs
capsule-cli/: Cargo.toml
capsule-cli/migration/src/: m20250718_000000_initialize.rs
capsule-cli/src/: config.rs  db.rs  demo.rs  main.rs  status.rs
capsule-cli/src/cli/: commands.rs  mod.rs
capsule-cli/src/import/: plan.rs
capsule-cli/src/utils/: directories.rs  files.rs  mod.rs
capsule-core/: Cargo.toml  HARDWARE_KEYS.md  README-tpm.md
capsule-core-ffi/: Cargo.toml
capsule-core-ffi/src/: catalog.rs  error.rs  lib.rs  records.rs  sidecar.rs
capsule-core-kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts  stage-bindings.sh
capsule-core-swift/: .gitignore  .swiftformat  .swiftlint.yml  Package.swift  README.md  stage-bindings.sh
capsule-core-swift/Sources/CapsuleHardware/: SecureEnclaveSigner.swift  SoftwareSigner.swift
capsule-core-swift/Sources/capsule_coreFFI/: shim.c
capsule-core-swift/Tests/CapsuleHardwareTests/: SmokeTests.swift
capsule-core/src/: ffi.rs  lib.rs  lifecycle.rs
capsule-core/src/backup/: artifact.rs  mod.rs
capsule-core/src/cbor/: encode.rs  mod.rs
capsule-core/src/crypto/: hash.rs  kdf.rs  mod.rs  primitives.rs  pwkdf.rs  rng.rs  verify_asset.rs
capsule-core/src/crypto/authority/: mod.rs  reference.rs
capsule-core/src/crypto/encryption/: blob.rs  mod.rs  stream.rs
capsule-core/src/crypto/keys/: album.rs  directory.rs  hardware.rs  hybrid_sig.rs  kem.rs  keystore.rs  master.rs  mod.rs  signer.rs  software.rs  tpm.rs
capsule-core/src/crypto/provenance/: action.rs  manifest.rs  mod.rs  record.rs
capsule-core/src/db/: driver.rs  mod.rs  rows.rs  schema.rs  vector.rs
capsule-core/src/exif/: extract.rs  timezone.rs
capsule-core/src/import/: executor.rs  planner.rs  scan.rs  scanner.rs  upload.rs
capsule-core/src/metadata/: export_policy.rs  file.rs  filter.rs  mod.rs
capsule-core/src/metadata/crdt/: counter.rs  lww.rs  mod.rs  or_set.rs
capsule-core/src/ml/: clip.rs  mod.rs  orchestrator.rs  registry.rs  reid.rs  runner.rs  video.rs
capsule-core/src/sidecar/: asset_sidecar.rs  io.rs  mod.rs  sidecar_v1.rs  stack_hint.rs
capsule-core/src/utils/: file.rs  hash.rs
capsule-core/src/validation/: idempotency.rs  mod.rs  protocol.rs  structural.rs
capsule-docs/: astro.config.mjs  biome.jsonc  package.json
capsule-docs/src/lib/: no-translate-terms.js  rehype-notranslate.mjs  rehype-notranslate.test.mjs
capsule-i18n/: Cargo.toml
capsule-i18n/src/: catalog.rs  format.rs  generated.rs  lib.rs  negotiate.rs
capsule-i18n/tests/: integration.rs
capsule-media/: Cargo.toml
capsule-media/examples/: generate_derivative.rs  generate_lqip.rs
capsule-media/src/fs/: mod.rs
capsule-media/src/image/: buffer.rs  lqip.rs  mod.rs
capsule-media/src/image/formats/: avif.rs  bmp.rs  dng.rs  gif.rs  heif.rs  jpeg.rs  jxl.rs  png.rs  raw.rs  tiff.rs  webp.rs
capsule-media/src/image/metadata/: mod.rs  raw.rs
capsule-sdk/: Cargo.toml
capsule-sdk/examples/: auth_flow.rs
capsule-swift/: .gitignore  .swiftformat  .swiftlint.yml  Project.swift  README.md  Tuist.swift  mise.toml
capsule-swift/Capsule.xcodeproj/: project.pbxproj
capsule-swift/Configuration/: Config.xcconfig
capsule-swift/Scripts/: build-rust-ffi.sh
capsule-vision/: README.md  pyproject.toml
capsule-vision/notebooks/: blip2.ipynb  example.ipynb
capsule-web/: README.md  biome.jsonc  components.json  package.json  rsbuild.config.ts  tsconfig.json
capsule-web/src/: index.css  index.tsx  routeTree.gen.ts
capsule-web/src/components/: app-sidebar.tsx  asset-grid.tsx  header.tsx  theme-provider.tsx  upload-dialog.tsx
capsule-web/src/data/: gateway.ts  hooks.ts  index.ts
capsule-web/src/domain/: album.ts  asset.ts  index.ts
capsule-web/src/i18n/: locale.ts
capsule-web/src/lib/: api.ts  auth-context.tsx
capsule-web/src/routes/: __root.tsx  dashboard.lazy.tsx  explore.lazy.tsx  forgot-password.lazy.tsx  index.lazy.tsx  login.lazy.tsx  photos.lazy.tsx  reset-password.tsx  settings.lazy.tsx  sharing.lazy.tsx  storage.lazy.tsx
gradle/: libs.versions.toml
locales/: README.md  config.json  en.json
locales/schema/: catalog.schema.json
mise-tasks/: build-android  build-apple  build-ffi-apple  build-linux-cross  build-swift  commit-check  format-check-swift  format-swift  gen-bindings  generate-swift  lint-check-swift  lint-swift  verify-examples
xtask/: Cargo.toml
xtask/src/: i18n.rs  main.rs
(+236 files in other folders)
