[package]
name = "capsule-core-ffi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "capsule_core_ffi"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
capsule-core = { path = "../capsule-core" }
ciborium = "0.2"
log = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uniffi = { version = "0.29", features = ["cli"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
oslog = "0.2"

[dev-dependencies]
tempfile = "3"
